Closed Bug 1171786 Opened 9 years ago Closed 9 years ago

DetailedPromise: undefined identifier in MediaKeySession.h

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox40 --- fixed
firefox41 --- fixed

People

(Reporter: ewong, Assigned: ewong)

References

Details

Attachments

(1 file, 1 obsolete file)

Getting this build error while fixing a different comm-central bug:

1:10.47 nsPop3URL.obj
 1:11.24 UnifiedBindings10.cpp
 1:11.24 e:\mozstuff\mozprgs\trunk\objdir\dist\include\mozilla/dom/MediaKeySession.h(100) : error C2065: 'DetailedPromise' : undeclared identifier
 1:11.24 e:\mozstuff\mozprgs\trunk\objdir\dist\include\mozilla/dom/MediaKeySession.h(100) : error C2923: 'already_AddRefed' : 'DetailedPromise' is not a valid template type argument for parameter 'T'
 1:11.24 e:\mozstuff\mozprgs\trunk\objdir\dist\include\mozilla/dom/MediaKeySession.h(102) : error C2065: 'DetailedPromise' : undeclared identifier
 1:11.24 e:\mozstuff\mozprgs\trunk\objdir\dist\include\mozilla/dom/MediaKeySession.h(102) : error C2923: 'nsRefPtr' : 'DetailedPromise' is not a valid template type argument for parameter 'T'
Apparently I can't set this blocking bug 1160445 which is where this change
should be set and I don't have access to that bug.
Attached patch proposed patch (v1) (obsolete) — Splinter Review
Assignee: nobody → ewong
Status: NEW → ASSIGNED
Attachment #8615755 - Flags: review?(cpearce)
Component: Build Config → DOM
Attachment #8615755 - Attachment is obsolete: true
Attachment #8615755 - Flags: review?(cpearce)
Attachment #8615756 - Flags: review?(cpearce)
Attachment #8615756 - Flags: review?(cpearce) → review+
(In reply to Edmund Wong (:ewong) from comment #4)
> Comment on attachment 8615756 [details] [diff] [review]
> proposed patch (v2)
> 
> Pushed to try:
> https://treeherder.mozilla.org/#/jobs?repo=try&revision=93a9fc04173d

Ok.. Mostly green. with a red R18, two orange B2G KK Em builds..  and a bunch
of oranges (looks like Intermittent).  

Is it ok to push to m-i?
https://hg.mozilla.org/mozilla-central/rev/edaec128d6ec
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
The latest pull of hg for nightly on 20150608 compiles without this error.  It also runs fine.
comm-aurora Thunderbird 40.0a2 builds are broken due to this bug. Please port back to mozilla-aurora. If Bug 1160445 landed on other branches too they probably need the fix as well.
Comment on attachment 8615756 [details] [diff] [review]
proposed patch (v2)

Approval Request Comment
[Feature/regressing bug #]: 1160445
[User impact if declined]: No build for comm-aurora
[Describe test coverage new/current, TreeHerder]:
[Risks and why]: 
[String/UUID change made/needed]: None
Attachment #8615756 - Flags: approval-mozilla-aurora?
Comment on attachment 8615756 [details] [diff] [review]
proposed patch (v2)

We want tb to build, taking it.
(and very low risk)
Attachment #8615756 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: