Bug 1171786 - Add DetailedPromise.h to MediaKeySession.h. r=cpearce, a=sledru